# zeredata-cli

./: CRATES_IO_PUBLISH.md  Cargo.toml  DEVELOPMENT.md  DISTRIBUTION.md  Dockerfile  INSTALL_GUIDE.md  LOCAL_TESTING.md  Makefile  README.md  SYNC_SETUP.md  install.ps1  install.sh
.github/workflows/: release.yml
homebrew/: zere-cli.rb
src/: config.rs  error.rs  main.rs
src/api/: assets.rs  auth.rs  client.rs  datasets.rs  jobs.rs  mod.rs
src/commands/: assets.rs  auth.rs  config.rs  datasets.rs  jobs.rs  mod.rs
src/tui/: app.rs  mod.rs  ui.rs
src/tui/components/: job_wizard.rs  mod.rs  search.rs
src/tui/views/: assets.rs  dashboard.rs  help.rs  jobs.rs  mod.rs
