[package]
name = "zere-cli"
version = "0.1.0"
edition = "2021"
authors = ["Umit Kavala <umit@zeredata.com>"]
description = "CLI tool for ZereData - synthetic data generation for warehouse robotics and computer vision"
homepage = "https://github.com/umitkavala/zeredata-cli"
repository = "https://github.com/umitkavala/zeredata-cli"
documentation = "https://github.com/umitkavala/zeredata-cli"
readme = "README.md"
license = "MIT"
keywords = ["cli", "robotics", "synthetic-data", "computer-vision", "rendering"]
categories = ["command-line-utilities", "computer-vision", "simulation"]

[[bin]]
name = "zere"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "cargo"] }

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Interactive prompts (for non-TUI wizards)
inquire = "0.7"

# Async runtime + HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "native-tls-vendored"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Config paths
directories = "5"

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
indicatif = "0.17"     # Progress bars (for non-TUI)
console = "0.15"       # Terminal colors (for non-TUI)
fuzzy-matcher = "0.3"  # Fuzzy search
